  * Fixes: NB#244485 - Wrong preedit selected after tapping backspace in a scenario..
  * Fixes: NB#245999 - backspace gets stuck after certain gesture in VKB
  * Fixes: NB#247713 - Keyboard drop shadow is missing
  * Fixes: NB#251619 - Virtual Keyboard open/close transition is off
  * Fixes: NB#236808 - MReactionMap c'tor has to find top level widget itself

 -- Michael Hasselmann <michaelh@openismus.com>  Mon, 02 May 2011 15:48:19 +0200

meego-keyboard (0.6.0-1) unstable; urgency=low

  * Fixes: 251599 - Polish virtual keyboard and the related symbol layout are wrong

 -- Michael Hasselmann <michaelh@openismus.com>  Mon, 02 May 2011 15:39:08 +0200

meego-keyboard (0.5.42-1) unstable; urgency=low

  * Fixes: NB#245545 - The characters in the buttons are shown with different font size
  * Fixes: NB#249527 - Cannot enter character at the place of cursor while adding Skype Account

 -- Michael Hasselmann <michaelh@openismus.com>  Fri, 29 Apr 2011 14:21:36 +0200

meego-keyboard (0.5.41-1) unstable; urgency=low

  * New release

 -- huaming wang <huaming.wang@nokia.com>  Thu, 28 Apr 2011 14:06:10 +0300

meego-keyboard (0.5.39-1) unstable; urgency=low

  * Fixes: NB#239493 - keyboard excessively loads fonts when starting
  * Fixes: NB#244719 - Backspace key introduces preedit text to end of text
  * Fixes: NB#238257 - VKB; Input Latin letters are gone after switching VKB to Zhuyin and enter.
  * Fixes: NB#244198 - [VKB] VKB Enter key changes label in specific scenario (Landscape->Portrait)
  * Fixes: NB#244127 - Parallel connections created on orientation change
  * Fixes: NB#235142 - [TASK] Disable left-right gesture recognition on VKB when only one plugin active
  * Fixes: NB#244635 - Word suggestion is shown even if there are no characters.
  * Fixes: NB#237208 - Show word suggestion on top of text field if not enough space below
  * Fixes: NB#244195 - Application with keyboard open in landscape mode can be iconified but immediately comes back