@@ -938,17 +938,25 @@ CandidateToolButtonStyle#switchButtonPortrait:pressed{
 }
 
 MKeyboardMagnifierStyle {
-    magnifier-image: "meegotouch-keyboard-magnifier-background" 2px 2px 2px 2px;
-    magnifier-size: 64 96;
-    magnifier-button-overlap: 0mm;
-    magnifier-font: $FONT_KEYBOARD; 
+    magnifier-image: "meegotouch-keyboard-magnifier-background" 24px 24px 24px 24px;
+    magnifier-button-overlap: 2.2mm;
+    magnifier-font: $FONT_KEYBOARD;
     magnifier-font-size: 64;
     magnifier-text-color: #505050;
     magnifier-text-margin-top: 0mm;
     magnifier-text-margin-bottom: 0mm;
+    magnifier-text-margin-bottom-lowercase: 0.3mm;
     magnifier-delay-closing-interval: 70;
 
     extended-keys-offset: 85;
+}
+
+MKeyboardMagnifierStyle.Landscape {
+    magnifier-size: 11.2mm 10mm;
+}
+
+MKeyboardMagnifierStyle.Portrait {
+    magnifier-size: 9mm 11.2mm;
 }
 
 #ExtendedKeys {
