@@ -17,6 +17,7 @@ meego-keyboard (0.6.1-1) unstable; urgency=low
   * Fixes: NB#247713 - Keyboard drop shadow is missing
   * Fixes: NB#251619 - Virtual Keyboard open/close transition is off
   * Fixes: NB#236808 - MReactionMap c'tor has to find top level widget itself
+  * Fixes: NB#252078 - keyboard magnifier is not according to layout guide
 
  -- Michael Hasselmann <michaelh@openismus.com>  Mon, 02 May 2011 15:48:19 +0200
 
